--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "youshido/graphql-bundle",
+  "name": "dnm/graphql-bundle",
   "description": "Symfony GraphQl Bundle",
   "license": "MIT",
   "authors": [
@@ -18,8 +18,7 @@
     }
   },
   "require": {
-    "php": ">=5.6",
-    "youshido/graphql": "~1.4"
+    "php": ">=5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7",
