--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,14 @@
     }
   },
   "require": {
-    "php": ">=5.6"
+    "php": ">=8.1",
+    "symfony/yaml": "^7.1",
+    "symfony/dependency-injection": "^7.1",
+    "symfony/framework-bundle": "^7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7",
-    "composer/composer": "~1.2",
-    "symfony/framework-bundle": "~2.7|~3.0"
+    "phpunit/phpunit": "^10.3",
+    "composer/composer": "^2.0",
+    "symfony/phpunit-bridge": "^7.1"
   }
 }
